--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,7 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler",
-		"types": [
-			"node",
-			"vite/client"
-		],
+		"types": ["node", "vite/client"]
 	}
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
